# lazyxchacha-rs

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: lazyxchacha_benchmark.rs
src/: hex.rs  keypair.rs  lazyxchacha.rs  lib.rs
