[package]
name = "lazyxchacha"
description = "Lazy XChaCha20-Poly1305 in golang base on RustCrypto: ChaCha20Poly1305."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["lazyxchacha", "xchacha"]
repository = "https://github.com/prongbang/lazyxchacha-rs"
exclude = ["Makefile", ".gitignore", "benches/", "target/"]

[dependencies]
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
faster-hex = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "lazyxchacha_benchmark"
harness = false
